fixed the slider text alignment

--- a/src/components/InfoSlider/styles.css
+++ b/src/components/InfoSlider/styles.css
@@ -21,11 +21,11 @@ h2 {
 }
 
 h1 {
-	text-align: left;
+	text-align: center;
 }
 
 p {
-	text-align: justify;
+	text-align: center;
 }
 
 header {
